# clichess

./: .gitignore  Cargo.toml
clichess/: Cargo.toml
clichess-model/: Cargo.toml
clichess-model/src/: lib.rs
clichess-server/: Cargo.toml
clichess-server/src/: lobby.rs  main.rs  messages.rs  start.rs  ws.rs
clichess/src/: fmt.rs  main.rs
clichess/src/modes/: local.rs  mod.rs  online.rs
libs/game/: Cargo.toml
libs/game/src/: chess_board.rs  chess_index.rs  chess_move.rs  consts.rs  file.rs  lib.rs  piece.rs  rank.rs  square.rs
server/: Cargo.toml
server/src/: handler.rs  main.rs  server.rs  ws.rs
src/: main.rs
src/modes/: local.rs  mod.rs
